<resources>
    <string name="app_name">Capstone</string>
    <string name="article_picture">Gambar Article</string>
    <string name="article_name">Judul Article</string>

    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="resulttest">Hasil Test</string>
    <string name="article_desc">Deskripsi</string>
    <string name="article_pictur">Gambar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>