<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dicoding.capstone.ui.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_nav_detail_article"
            app:destination="@id/nav_detail_article">
            <argument
                android:name="id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_article"
        android:name="com.dicoding.capstone.ui.ui.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article" >

        <action
            android:id="@+id/action_nav_article_to_nav_detail_article"
            app:destination="@id/nav_detail_article">
            <argument
                android:name="id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.dicoding.capstone.ui.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/nav_detail_article"
        android:name="com.dicoding.capstone.ui.ui.DetailArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_detail_article" />


</navigation>